--- a/src/App.css
+++ b/src/App.css
@@ -440,7 +440,7 @@ label {
 }
 
 .bucket-button {
-  background-color: #007bff;
+  background-color: #163f6b;
   color: white;
   padding: 10px;
   border: none;
