--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #1a73e8; /* Deep blue header */
+  background-color: #216fd4; /* Deep blue header */
   color: rgb(0, 0, 0);
   padding: 15px 30px;
   border-radius: 0px;
